Bug 196377 - rt5640 headset jack
Summary: rt5640 headset jack
Status: RESOLVED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Sound(ALSA) (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Jaroslav Kysela
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-07-15 02:01 UTC by youling257
Modified: 2018-06-08 14:01 UTC (History)
6 users (show)

See Also:
Kernel Version: 4.12
Subsystem:
Regression: No
Bisected commit-id:


Attachments

Comment 1 youling257 2017-07-15 02:09:12 UTC
baytrailaudio Intel MID Audio Jack
input: baytrailaudio Intel MID Audio Jack as /devices/platform/AMCR0F28:00/sound/card1/input6
Comment 2 RussianNeuroMancer 2017-07-20 06:43:49 UTC
Headset jack detection is doesn't work for me too, Linux 4.12.2 was tested on on HP Stream 7, Lenovo Miix2 8 and DEXP Ursus 10XW.
Comment 3 Pierre Bossart 2017-07-24 16:50:28 UTC
yeah, the jack detection was never ported completely from Android. Again too many quirks to test. There was a PR on github but it's too obsolete. see https://github.com/plbossart/sound/pull/1
Comment 5 Pierre Bossart 2017-08-23 19:19:46 UTC
(In reply to youling257 from comment #4)
> https://github.com/me176c-dev/kernel_asus_me176c/commit/
> c6d90d9c975a36c1847a7eec10d2b3823c5cf7b4

There are two quirks for the jack detection (codec or SOC-based), the code you mentioned probably doesn't scale to all platforms.
Comment 6 RussianNeuroMancer 2017-08-27 17:02:23 UTC
> jack detection was never ported completely from Android. Again too many
> quirks to test.

If it will be useful, I can perform quirks testing on Lenovo Miix2 8, HP Stream 7, DEXP devices and Ployer MOMO7W. As far I know, many device owners are willing to help with testing.
Comment 7 youling257 2018-01-28 16:57:14 UTC
https://github.com/jwrdegoede/linux-sunxi/commit/f43d1a4a3c06e4b9e6f80bd87e015c51fe36b5f5

I test this patch,Jack detect not work with bytcr z3735f.
Comment 8 RussianNeuroMancer 2018-01-29 16:58:59 UTC
@youling257 this code is work in progress. It's not finished and not ready for testing.
Comment 9 iillyyaa2033 2018-06-08 12:05:37 UTC
I have Prestigio MultiPad Visconte V (pmp1012te).




How can I help you?
Comment 10 Hans de Goede 2018-06-08 14:01:16 UTC
Thank you for you help offer. The code to support jack-detect has been finished and is queued up for merging into the 4.18 kernel, closing.

Note You need to log in before you can comment on or make changes to this bug.